--- a/Front/index.html
+++ b/Front/index.html
@@ -49,7 +49,7 @@
                     <th scope="col">Poblacion</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody id= "tablaPaises">
                   <tr>
                     
                   </tr>
