--- a/Front/index.html
+++ b/Front/index.html
@@ -46,13 +46,11 @@
                     <th scope="col">nombre</th>
                     <th scope="col">Capital</th>
                     <th scope="col">Idioma</th>
-                    <th scope="col">Poblacion</th>
+                    <th scope="col">Población</th>
                   </tr>
                 </thead>
-                <tbody id= "tablaPaises">
-                  <tr>
+                <tbody id= "tablaAPI">
                     
-                  </tr>
                 </tbody>
               </table>
               
